package com.fitmeai.model.enums;

public enum Category {
    TOP, BOTTOM, DRESS, SHOES, ACCESSORY
}
