package com.fitmeai.model.enums;

public enum GarmentType {
    UPPER_BODY, LOWER_BODY, DRESSES
}
