package com.fitmeai.model.enums;

public enum Gender {
    HOMME, FEMME, UNISEX
}
