package com.fitmeai.model.enums;

public enum NotificationType {
    TRYON_APPROVED, TRYON_REJECTED, BADGE_EARNED, ORDER_CONFIRMED, ORDER_STATUS_CHANGED, GENERAL
}
