package com.fitmeai.model.enums;

public enum OrderStatus {
    EN_ATTENTE, PAID, SHIPPED, DELIVERED, CANCELLED
}
