package com.fitmeai.model.enums;

public enum PaymentMethod {
    CARD, CASH
}
