package com.fitmeai.model.enums;

public enum TryOnStatus {
    PENDING, APPROVED, REJECTED
}
